objects/CTS_Salesforce_Object_Ref__mdt.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <description>Summary/ description for the Salesforce object record</description>
        <label>Description</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Object_API_Name__c</fullName>
        <description>Salesforce Object API Name</description>
        <inlineHelpText>Salesforce Object API Name</inlineHelpText>
        <label>Object API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Label__c</fullName>
        <description>Salesforce Object Label Name</description>
        <inlineHelpText>Salesforce Object Label Name</inlineHelpText>
        <label>Object Label</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <description>Salesforce objects referenced and used within the CTS Integration</description>
    <label>CTS Salesforce Object Ref</label>
    <pluralLabel>CTS Salesforce Object Refs</pluralLabel>
</CustomObject>